syntax = "proto3";
package curioucity.v1alpha;
import "curioucity/v1alpha/union.proto";

service TagService {
  rpc CreateTag(CreateTagRequest) returns (CreateTagResponse);
  rpc DeleteTag(DeleteTagRequest) returns (DeleteTagResponse);
  rpc GetTag(GetTagRequest) returns (GetTagResponse);
  rpc ListTag(ListTagRequest) returns (ListTagResponse);
}

message CreateTagRequest {
  string name = 1;
}

message CreateTagResponse {
  curioucity.v1alpha.FullTag tag = 1;
}

message DeleteTagRequest {
  string name = 1;
}

message DeleteTagResponse {}

message GetTagRequest {
  string name = 1; 
}

message GetTagResponse {
  curioucity.v1alpha.FullTag tag = 1;
}

message ListTagRequest {
  optional int32 page_size = 1;
}

message ListTagResponse {
  repeated curioucity.v1alpha.FullTag tags = 1;
  int64 size = 2;
}