syntax = "proto3";
package curioucity.v1alpha;

import "curioucity/v1alpha/url.proto";
import "curioucity/v1alpha/general.proto";
import "curioucity/v1alpha/union.proto";

service UrlService {
  rpc CreateUrl(CreateUrlRequest) returns (CreateUrlResponse);
  rpc DeleteUrl(DeleteUrlRequest) returns (DeleteUrlResponse);
  rpc GetUrl(GetUrlRequest) returns (GetUrlResponse);
  rpc ListUrl(ListUrlRequest) returns (ListUrlResponse);
}

message CreateUrlRequest {
  string url = 1;
  curioucity.v1alpha.ResourceType resource_type = 2;
}

message CreateUrlResponse {
  curioucity.v1alpha.FullUrl url = 1;
}

message DeleteUrlRequest {
  string url = 1;
}

message DeleteUrlResponse {}

message GetUrlRequest {
  string url = 1;
}

message GetUrlResponse {
  curioucity.v1alpha.FullUrl url = 1;
}

message ListUrlRequest {
  optional int32 page_size = 1;
}

message ListUrlResponse {
  repeated curioucity.v1alpha.FullUrl urls = 1;
  int64 size = 2;
}